--- a/stories/index.html
+++ b/stories/index.html
@@ -2581,6 +2581,12 @@
       <td><a name="pa0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0210</td>
+      <td><a href="/stories/pa/0210_ਟਿੰਗੀ-ਅਤੇ-ਗਾਂਵਾਂ_slides.html" target="_blank">ਟਿੰਗੀ ਅਤੇ ਗਾਂਵਾਂ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0210"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0231</td>
       <td><a href="/stories/pa/0231_ਮੌਸਮ-ਦੀ-ਕਿਤਾਬ_slides.html" target="_blank">ਮੌਸਮ ਦੀ ਕਿਤਾਬ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3587,7 +3593,7 @@
       <td>0210</td>
       <td><a href="http://my.africanstorybook.org/stories/tingi-and-cows">Tingi and the Cows</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0210">ar</a>, <a href="#es0210">es</a>, <a href="#ko0210">ko</a>, <a href="#no0210">no</a>, <a href="#tl0210">tl</a>, <a href="#zh0210">zh</a></td>
+      <td><a href="#ar0210">ar</a>, <a href="#es0210">es</a>, <a href="#ko0210">ko</a>, <a href="#no0210">no</a>, <a href="#pa0210">pa</a>, <a href="#tl0210">tl</a>, <a href="#zh0210">zh</a></td>
     </tr>
     <tr>
       <td>0212</td>
