--- a/stories/index.html
+++ b/stories/index.html
@@ -2557,6 +2557,12 @@
       <td><a name="pa0089"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0095</td>
+      <td><a href="/stories/pa/0095_ਜ਼ਾਮਾ-ਮਹਾਨ-ਹੈ_slides.html" target="_blank">ਜ਼ਾਮਾ ਮਹਾਨ ਹੈ!</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0112</td>
       <td><a href="/stories/pa/0112_ਮੇਰਾ-ਸਰੀਰ_slides.html" target="_blank">ਮੇਰਾ ਸਰੀਰ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3419,7 +3425,7 @@
       <td>0095</td>
       <td><a href="http://my.africanstorybook.org/stories/zama-great">Zama is great!</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0095">ar</a>, <a href="#de0095">de</a>, <a href="#hi0095">hi</a>, <a href="#ko0095">ko</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#tl0095">tl</a>, <a href="#zh0095">zh</a></td>
+      <td><a href="#ar0095">ar</a>, <a href="#de0095">de</a>, <a href="#hi0095">hi</a>, <a href="#ko0095">ko</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#pa0095">pa</a>, <a href="#tl0095">tl</a>, <a href="#zh0095">zh</a></td>
     </tr>
     <tr>
       <td>0098</td>
