--- a/stories/index.html
+++ b/stories/index.html
@@ -2503,6 +2503,12 @@
       <td><a name="pa0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0004</td>
+      <td><a href="/stories/pa/0004_ਬੱਕਰੀ-ਕੁੱਤਾ-ਅਤੇ-ਗਾਂ_slides.html" target="_blank">ਬੱਕਰੀ, ਕੁੱਤਾ ਅਤੇ ਗਾਂ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0004"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0006</td>
       <td><a href="/stories/pa/0006_ਅਨਾਨਸੀ-ਅਤੇ-ਬੁੱਧੀ_slides.html" target="_blank">ਅਨਾਨਸੀ ਅਤੇ ਬੁੱਧੀ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3263,7 +3269,7 @@
       <td>0004</td>
       <td><a href="http://my.africanstorybook.org/stories/goat-dog-and-cow">Goat, Dog and Cow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0004">ar</a>, <a href="#ko0004">ko</a>, <a href="#tl0004">tl</a>, <a href="#zh0004">zh</a></td>
+      <td><a href="#ar0004">ar</a>, <a href="#ko0004">ko</a>, <a href="#pa0004">pa</a>, <a href="#tl0004">tl</a>, <a href="#zh0004">zh</a></td>
     </tr>
     <tr>
       <td>0006</td>
