--- a/stories/ko/0001_아주-키가-큰-아저씨.html
+++ b/stories/ko/0001_아주-키가-큰-아저씨.html
@@ -63,63 +63,63 @@ Cornelius Gulere<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
 
-<p>침대는 너무 짧았어요.</p>
+<p>침대는 너무 작았어요.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
 
-<p>자전거도 너무 짧았어요.</p>
+<p>자전거도 너무 작았어요.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
 
-<p>이 아저씨는 키가 너무 컸어요!</p>
+<p>아저씨께서는 키가 너무 컸어요!</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
 
-<p>아저씨는 아주 긴 괭이를 만들었어요.</p>
+<p>아저씨께서는 아주 긴 괭이를 만들었어요.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
 
-<p>아저씨는 문을 아주 높게 만들었어요.</p>
+<p>아저씨께서는 문을 아주 높게 만들었어요.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
 
-<p>아저씨는 아주 긴 침대를 만들었어요.</p>
+<p>아저씨께서는 아주 긴 침대를 만들었어요.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
 
-<p>아저씨는 아주 높은 자전거를 만들었어요.</p>
+<p>아저씨께서는 아주 높은 자전거를 만들었어요.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
 
-<p>아저씨는 아주 높은 의자에 앉았어요. 그는 아주 긴 포크로 밥을 먹었어요.</p>
+<p>아저씨께서는 아주 높은 의자에 앉았어요. 그는 아주 긴 포크로 밥을 먹었어요.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
 
-<p>아저씨는 집을 떠나서 큰 숲 속에 살았어요. 아저씨는 오래오래 살았어요.</p>
+<p>아저씨께서는 집을 떠나서 큰 숲 속에 살았어요. 아저씨께서는 오래오래 살았어요.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
