--- a/stories/ko/0002_이-동물들을-보세요_slides.html
+++ b/stories/ko/0002_이-동물들을-보세요_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/03.jpg" /></p>
-<p>소는 &quot;음메&quot; 라고 해요</p>
+<p>소는 &quot;음메&quot; 라고 해요.</p>
 <center>
 <strong>2</strong>
 </center>
