--- a/stories/ko/0052_심베그위레.html
+++ b/stories/ko/0052_심베그위레.html
@@ -105,7 +105,7 @@ Rukia Nantale<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
 
-<p>저녁이 되었을 때, 그녀는 물가 근처 키가 큰 나무에 올라가 가지속에 자신의 침대를 만들었어요. 그녀가 잠이 들을때, 그녀는 노래 했어요, “엄마, 엄마, 엄마, 엄마는 나를 떠났어요. 엄마가 날 떠나 돌아 오지 않았어요. 아버지는 더 이상 날 사랑하지 않습니다. 엄마, 언제 돌아오세요? 엄마는 저를 떠났어요. “</p>
+<p>저녁이 되었을 때, 그녀는 물가 근처 키가 큰 나무에 올라가 가지속에 자신의 침대를 만들었어요. 그녀가 잠이 들을때, 그녀는 노래 했어요, “엄마, 엄마, 엄마, 엄마는 나를 떠났어요. 엄마가 날 떠나 돌아 오지 않았어요. 아버지는 더 이상 날 사랑하지 않습니다. 엄마, 언제 돌아오세요? 엄마는 저를 떠났어요.”</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Rukia Nantale<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
 
-<p>이 여성은 나무를 보았어요. 그녀가 어떤 소녀와 화려한 담요의 조각을 보았을 때, 그녀는 “내 동생의 아이,심베그위레!” 라고 외쳤어요. 다른 여성들도 세척을 중단하고 심베그위레를 나무에서 내려오게 도왔어요. 그녀의 이모는 어린 소녀를 안아 그녀를 위로하려고 노력했어요.</p>
+<p>이 여성은 나무를 보았어요. 그녀가 어떤 소녀와 화려한 담요의 조각을 보았을 때, 그녀는 “내 동생의 아이, 심베그위레!” 라고 외쳤어요. 다른 여성들도 세척을 중단하고 심베그위레를 나무에서 내려오게 도왔어요. 그녀의 이모는 어린 소녀를 안아 그녀를 위로하려고 노력했어요.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
@@ -147,14 +147,14 @@ Rukia Nantale<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
 
-<p>그녀의 아버지는 매일 그녀를 방문했어요. 결국에는, 아버지는 아니타와 함께 왔지요. 아니타는 심베그위레 손에게 다가갔어요. “어린 아이야,내가 너무 미안해, 내가 잘못했어” 라고 말하며 그녀는 울었어요. “나에게 다시 기회를 주겠니?” 심베그위레는 아버지의 걱정 가득한 얼굴을 바라 보았어요. 그런 다음 그녀는 천천히 앞으로 다가와 아니타를 안았어요.</p>
+<p>그녀의 아버지는 매일 그녀를 방문했어요. 결국에는, 아버지는 아니타와 함께 왔지요. 아니타는 심베그위레 손에게 다가갔어요. “어린 아이야, 내가 너무 미안해, 내가 잘못했어” 라고 말하며 그녀는 울었어요. “나에게 다시 기회를 주겠니?” 심베그위레는 아버지의 걱정 가득한 얼굴을 바라 보았어요. 그런 다음 그녀는 천천히 앞으로 다가와 아니타를 안았어요.</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
 
-<p>그 다음 주, 아니타는 식사를 위해 집에, 심베그위레, 그녀의 사촌, 그리고 그녀의 이모를 초대했어요. 아니타는 심베그위레가 좋아하는 음식을 모두 준비하고, 모두가 배가 부를때 까지 먹었어요. 그리고 어른들이 이야기하는 동안 아이들은 놀았어요. 심베그위레는 행복하고 용감함을 느꼈어요. 그녀는 곧,아주 곧, 그녀의 아버지와 그녀의 새 엄마와 살기 위해 집으로 돌아 것이라고 결정했어요.</p>
+<p>그 다음 주, 아니타는 식사를 위해 집에, 심베그위레, 그녀의 사촌, 그리고 그녀의 이모를 초대했어요. 아니타는 심베그위레가 좋아하는 음식을 모두 준비하고, 모두가 배가 부를때 까지 먹었어요. 그리고 어른들이 이야기하는 동안 아이들은 놀았어요. 심베그위레는 행복하고 용감함을 느꼈어요. 그녀는 곧, 아주 곧, 그녀의 아버지와 그녀의 새 엄마와 살기 위해 집으로 돌아 것이라고 결정했어요.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
