--- a/stories/pa/0111_ਹਿੱਪੋ-ਦੇ-ਵਾਲ-ਕਿਉਂ-ਨਹੀਂ-ਹੁੰਦੇ_slides.html
+++ b/stories/pa/0111_ਹਿੱਪੋ-ਦੇ-ਵਾਲ-ਕਿਉਂ-ਨਹੀਂ-ਹੁੰਦੇ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>염소, 개 그리고 소 - Global African Storybook</title>
+  <title>ਹਿੱਪੋ ਦੇ ਵਾਲ ਕਿਉਂ ਨਹੀਂ ਹੁੰਦੇ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="염소-개-그리고-소" class="slide level1">
-<h1>염소, 개 그리고 소</h1>
+<section id="ਹਪ-ਦ-ਵਲ-ਕਉ-ਨਹ-ਹਦ" class="slide level1">
+<h1>ਹਿੱਪੋ ਦੇ ਵਾਲ ਕਿਉਂ ਨਹੀਂ ਹੁੰਦੇ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
-<p>염소, 개 그리고 소는 좋은 친구였어요. 어느 날 그들은 택시를 타고 여행을 떠났어요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
+<p>ਇਕ ਦਿਨ ਖਰਗੋਸ਼ ਨਦੀ ਦੇ ਕਿਨਾਰੇ ਘੁੰਮ ਰਿਹਾ ਸੀ।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
-<p>그들이 도착했을 때, 운전사가 택시 요금을 내라고 했어요. 소는 그녀의 요금을 냈어요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/03.jpg" /></p>
+<p>ਉੱਥੇ ਹਿੱਪੋ ਵੀ ਸੀ ਜੋ ਸੈਰ ਕਰ ਰਹੀ ਸੀ ਅਤੇ ਕੁਝ ਚੰਗੇ ਹਰੇ ਘਾਹ ਨੂੰ ਖਾ ਰਹੀ ਸੀ।</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
-<p>개는 조금 더 냈어요, 왜냐하면 정확한 액수가 없었어요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
+<p>ਹਿੱਪੋ ਨੇ ਖਰਗੋਸ਼ ਨੂੰ ਨਹੀਂ ਵੇਖਿਆ ਸੀ ਅਤੇ ਗਲਤੀ ਨਾਲ ਉਸ ਨੇ ਖਰਗੋਸ਼ ਦੇ ਪੈਰ ਤੇ ਕਦਮ ਰੱਖ ਦਿੱਤਾ। ਖਰਗੋਸ਼ ਨੇ ਰੌਲਾ ਪਾਇਆ, &quot;ਹੇ ਹਿੱਪੋ! ਤੈਨੂੰ ਦਿਸਦਾ ਨਹੀਂ ਕਿ ਤੂੰ ਮੇਰੇ ਪੈਰ ਤੇ ਖੜ੍ਹਾ ਹੈਂ?&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
-<p>운전기사가 개에게 거스름 돈을 주려고 할때 염소가 아무것도 내지 않고 도망 쳤어요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
+<p>ਹਿੱਪੋ ਨੇ ਖਰਗੋਸ਼ ਤੋਂ ਮੁਆਫੀ ਮੰਗੀ, &quot;ਮੈਨੂੰ ਅਫ਼ਸੋਸ ਹੈ। ਮੈਂ ਤੁਹਾਨੂੰ ਵੇਖਿਆ ਨਹੀਂI ਕਿਰਪਾ ਕਰਕੇ ਮੈਨੂੰ ਮਾਫ਼ ਕਰ ਦਿਓ!” ਪਰ ਖਰਗੋਸ਼ ਨੇ ਇਕ ਨਾ ਸੁਣੀ ਅਤੇ ਉਹ ਹਿੱਪੋ ਤੇ ਚੀਕਦਾ ਹੋਇਆ ਬੋਲਿਆ, “ਤੂੰ ਇਹ ਜਾਣ-ਬੁੱਝ ਕੇ ਕੀਤਾ ਹੈ! ਕਿਸੇ ਦਿਨ ਤੂੰ ਦੇਖੀਂ! ਤੇਨੂੰ ਇਸ ਦਾ ਭੁਗਤਾਨ ਕਰਨਾ ਪਵੇਗਾ!”</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
-<p>운전기사는 정말 화가 났어요. 그 운전기사는 개한테 거스름돈을 주지 않고 떠났어요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
+<p>ਖਰਗੋਸ਼ ਅੱਗ ਨੂੰ ਲੱਭਣ ਚਲਿਆ ਗਿਆ ਅਤੇ ਉਸ ਨੇ ਆਖਿਆ, “ਜਾਓ, ਹਿੱਪੋ ਨੂੰ ਸਾੜ ਦਿਓ ਜਦ ਉਹ ਘਾਹ ਖਾਣ ਲਈ ਪਾਣੀ ਵਿੱਚੋਂ ਬਾਹਰ ਆਈ। ਉਸ ਨੇ ਮੇਰੇ ਤੇ ਪੈਰ ਰੱਖਿਆ!” ਅੱਗ ਨੇ ਜਵਾਬ ਦਿੱਤਾ, “ਕੋਈ ਗੱਲ ਨਹੀਂ, ਖਰਗੋਸ਼, ਮੇਰੇ ਦੋਸਤI ਮੈਂ ਉਸੇ ਤਰ੍ਹਾਂ ਹੀ ਕਰਾਂਗਾ ਜਿਵੇਂ ਤੂੰ ਚਾਹੁੰਦਾ ਹੈਂI”</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
-<p>그래서 아직도 개는 차를보면 거스름돈을 줘야하는 운전기사를 찾으려고 달려가요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
+<p>ਬਾਅਦ ਵਿੱਚ, ਹਿੱਪੋ ਨਦੀ ਤੋਂ ਦੂਰ ਘਾਹ ਖਾ ਰਹੀ ਸੀ ਜਦ ਅੱਗ ਦੀ ਲਾਟ ਨਿਕਲੀ। ਅੱਗ ਹਿੱਪੋ ਦੇ ਵਾਲਾਂ ਨੂੰ ਸਾੜਣ ਲੱਗੀ।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
-<p>염소는 차 소리가 들리면 도망가요. 그녀는 요금을 내지 않은 죄로 체포가 될까봐무서워해요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
+<p>ਹਿੱਪੋ ਚੀਕੀ ਅਤੇ ਪਾਣੀ ਵਲ ਭੱਜ ਗਈ। ਉਸ ਦੇ ਸਾਰੇ ਵਾਲ ਅੱਗ ਨਾਲ ਸੜ ਗਏ। ਹਿੱਪੋ ਚੀਕਦੀ ਰਹੀ &quot;ਮੇਰੇ ਵਾਲ ਅੱਗ ਨਾਲ ਸੜ ਗਏ! ਮੇਰੇ ਸਾਰੇ ਵਾਲ ਚਲੇ ਗਏ! ਮੇਰੇ ਸੁੰਦਰ ਵਾਲ!&quot;</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
-<p>그리고 소는 차가 와도 아무렇지 않아요. 소는 자기가 요금을 다 냈다는 걸 알아서 여유롭게 차 앞에서 길도 건너요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
+<p>ਖਰਗੋਸ਼ ਖੁਸ਼ ਸੀ ਕਿ ਹਿੱਪੋ ਦੇ ਵਾਲ ਸੜ ਗਏ। ਅਤੇ ਇਸ ਦਿਨ ਤੱਕ, ਅੱਗ ਦੇ ਡਰ ਤੋਂ, ਹਿੱਪੋ ਕਦੇ ਵੀ ਪਾਣੀ ਤੋਂ ਦੂਰ ਨਹੀਂ ਜਾਂਦੀ।</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="염소-개-그리고-소-1">염소, 개 그리고 소</h2>
-<strong>Text:</strong> Fabian Wakholi<br> <strong>Illustrations:</strong> Marleen Visser<br> <strong>Translation:</strong> Michelle Kim<br> <strong>Language:</strong> Korean<br>
+<h2 id="ਹਪ-ਦ-ਵਲ-ਕਉ-ਨਹ-ਹਦ-1">ਹਿੱਪੋ ਦੇ ਵਾਲ ਕਿਉਂ ਨਹੀਂ ਹੁੰਦੇ</h2>
+<strong>Text:</strong> Basilio Gimo, David Ker<br> <strong>Illustrations:</strong> Carol Liddiment<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/goat-dog-and-cow'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/why-hippos-have-no-hair'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
