--- a/stories/index.html
+++ b/stories/index.html
@@ -2569,6 +2569,12 @@
       <td><a name="pa0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0111</td>
+      <td><a href="/stories/pa/0111_ਹਿੱਪੋ-ਦੇ-ਵਾਲ-ਕਿਉਂ-ਨਹੀਂ-ਹੁੰਦੇ_slides.html" target="_blank">ਹਿੱਪੋ ਦੇ ਵਾਲ ਕਿਉਂ ਨਹੀਂ ਹੁੰਦੇ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0112</td>
       <td><a href="/stories/pa/0112_ਮੇਰਾ-ਸਰੀਰ_slides.html" target="_blank">ਮੇਰਾ ਸਰੀਰ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2585,6 +2591,12 @@
       <td><a href="/stories/pa/0129_ਛੋਟਾ-ਆਲਸੀ-ਭਰਾ_slides.html" target="_blank">ਛੋਟਾ ਆਲਸੀ ਭਰਾ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="pa0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0141</td>
+      <td><a href="/stories/pa/0141_ਮੁਰਗੀ-ਅਤੇ-ਕੰਨਖਜੂਰਾ_slides.html" target="_blank">ਮੁਰਗੀ ਅਤੇ ਕੰਨਖਜੂਰਾਮੁਰਗੀ ਅਤੇ ਕੰਨਖਜੂਰਾ ਦੋਸਤ ਸਨ। ਪਰ ਉਹ ਹਮੇਸ਼ਾ ਇਕ-ਦੂਜੇ ਦੇ ਨਾਲ ਮੁਕਾਬਲਾ ਕਰਦੇ ਸਨ। ਇਕ ਦਿਨ ਉਹਨਾਂ ਨੇ ਫੁੱਟਬਾਲ ਖੇਡਣ ਦਾ ਫੈਸਲਾ ਕੀਤਾ, ਇਹ ਵੇਖਣ ਲਈ ਕਿ ਵਧੀਆ ਖਿਡਾਰੀ ਕੌਣ ਸੀ।ਉਹ ਫੁੱਟਬਾਲ ਦੇ ਮੈਦਾਨ ਵਿਚ ਗਏ ਅਤੇ ਆਪਣੀ ਖੇਡ ਸ਼ੁਰੂ ਕੀਤੀ। ਮੁਰਗੀ ਤੇਜ਼ ਸੀ, ਪਰ ਕੰਨਖਜੂਰਾ ਉਸ ਤੋਂ ਵੀ ਜ਼ਿਆਦਾ ਤੇਜ਼ ਸੀ। ਮੁਰਗੀ ਦੂਰ ਕਿੱਕ ਮਾਰਦੀ ਪਰ ਕੰਨਖਜੂਰਾ ਉਸ ਤੋਂ ਵੀ ਜ਼ਿਆਦਾ ਦੂਰ ਕਿੱਕ ਮਾਰਦਾ। ਮੁਰਗੀ ਚਿੜਚਿੜੀ ਹੋਣ ਲੱਗ ਪਈ।ਉਹਨਾਂ ਨੇ ਪੈਨਲਟੀ ਸ਼ੂਟਆਊਟ ਖੇਡਣ ਦਾ ਫੈਸਲਾ ਕੀਤਾ। ਪਹਿਲਾਂ ਕੰਨਖਜੂਰਾ ਗੋਲ ਕੀਪਰ ਬਣਿਆ। ਮੁਰਗੀ ਨੇ ਸਿਰਫ ਇੱਕ ਗੋਲ ਕੀਤਾ। ਫਿਰ ਮੁਰਗੀ ਦੀ ਗੋਲ ਕੀਪਰ ਬਣਨ ਦੀ ਵਾਰੀ ਆਈ।ਕੰਨਖਜੂਰੇ ਨੇ ਬਾਲ ਨੂੰ ਕਿੱਕ ਕਰਕੇ ਗੋਲ ਕੀਤਾ। ਕੰਨਖਜੂਰੇ ਨੇ ਬਾਲ ਨੂੰ ਟਪਕਾ ਕੇ ਗੋਲ ਕੀਤਾ। ਕੰਨਖਜੂਰੇ ਨੇ ਬਾਲ ਨੂੰ ਸਿਰ ਮਾਰ ਕੇ ਗੋਲ ਕੀਤਾ। ਕੰਨਖਜੂਰੇ ਨੇ ਪੰਜ ਗੋਲ ਕੀਤੇ।ਮੁਰਗੀ ਗੁੱਸੇ ਵਿੱਚ ਸੀ ਕਿਉਂਕਿ ਉਹ ਹਾਰ ਗਈ। ਉਸ ਨੇ ਹਾਰ ਚੰਗੀ ਤਰ੍ਹਾਂ ਨਹੀ ਸੀ ਅਪਣਾਈ। ਕੰਨਖਜੂਰਾ ਹੱਸਣ ਲੱਗ ਪਿਆ ਕਿਉਂਕਿ ਉਸਦਾ ਦੋਸਤ ਖ਼ਲਬਲੀ ਮਚਾ ਰਿਹਾ ਸੀ।ਮੁਰਗੀ ਬਹੁਤ ਗੁੱਸੇ ਵਿੱਚ ਸੀ ਕਿ ਉਸ ਨੇ ਚੁੰਝ ਖੋਲੀ ਅਤੇ ਕੰਨਖਜੂਰੇ ਨੂੰ ਨਿਗਲ ਗਈ।ਜਦ ਮੁਰਗੀ ਘਰ ਵਾਪਸ ਜਾ ਰਹੀ ਸੀ, ਉਸਨੂੰ ਕੰਨਖਜੂਰੇ ਦੀ ਮਾਂ ਮਿਲੀ। ਕੰਨਖਜੂਰੇ ਦੀ ਮਾਂ ਨੇ ਪੁੱਛਿਆ, “ਕੀ ਤੂੰ ਮੇਰੇ ਬੱਚੇ ਨੂੰ ਦੇਖਿਆ ਹੈ?” ਮੁਰਗੀ ਨੇ ਕੁਝ ਵੀ ਨਹੀਂ ਕਿਹਾ। ਕੰਨਖਜੂਰੇ ਦੀ ਮਾਂ ਚਿੰਤਤ ਸੀ।ਫਿਰ ਕੰਨਖਜੂਰੇ ਦੀ ਮਾਂ ਨੂੰ ਇੱਕ ਛੋਟੀ ਅਵਾਜ਼ ਸੁਣੀ। “ਮੰਮੀ ਮੇਰੀ ਮਦਦ ਕਰੋ!” ਅਵਾਜ਼ ਚੀਕ ਕੇ ਕਹਿੰਦੀ। ਕੰਨਖਜੂਰੇ ਦੀ ਮਾਂ ਨੇ ਆਲੇ-ਦੁਆਲੇ ਵੇਖਿਆ ਅਤੇ ਧਿਆਨ ਨਾਲ ਸੁਣਿਆ। ਅਵਾਜ਼ ਮੁਰਗੀ ਦੇ ਅੰਦਰੋਂ ਆ ਰਹੀ ਸੀ।ਕੰਨਖਜੂਰੇ ਦੀ ਮਾਂ ਚੀਕੀ, “ਆਪਣੀ ਖਾਸ ਸ਼ਕਤੀ ਵਰਤੋ ਮੇਰੇ ਬੱਚੇ!” ਕੰਨਖਜੂਰੇ ਇੱਕ ਬੁਰੀ ਬਦਬੂ ਅਤੇ ਭਿਆਨਕ ਸੁਆਦ ਬਣਾ ਸਕਦੇ ਹਨ। ਮੁਰਗੀ ਬੀਮਾਰ ਮਹਿਸੂਸ ਕਰਨ ਲੱਗੀ।ਮੁਰਗੀ ਨੇ ਡਕਾਰ ਲਿਆ। ਫਿਰ ਉਸ ਨੇ ਨਿਗਲ ਕੇ ਥੁਕਿਆ। ਫਿਰ ਉਸ ਨੇ ਛਿੱਕਿਆ ਅਤੇ ਖੰਘਿਆ। ਫਿਰ ਹੋਰ ਖੰਘਿਆ। ਕੰਨਖਜੂਰਾ ਘਿਣਾਉਣਾ ਸੀ!ਮੁਰਗੀ ਖੰਘਦੀ ਰਹੀ ਜਦ ਤੱਕ ਉਸਨੇ ਕੰਨਖਜੂਰੇ ਨੂੰ ਪੇਟ ਵਿੱਚੋਂ ਨਾ ਬਾਹਰ ਖੰਘਿਆI ਕੰਨਖਜੂਰੇ ਦੀ ਮਾਂ ਅਤੇ ਉਸਦਾ ਬੱਚਾ ਇੱਕ ਰੁੱਖ ਤੇ ਛੁਪਣ ਲਈ ਚੜ੍ਹ ਗਏ।ਉਸ ਸਮੇਂ ਤੋਂ, ਮੁਰਗੀਆਂ ਅਤੇ ਕੰਨਖਜੂਰੇ ਦੁਸ਼ਮਣ ਬਣ ਗਏ।* License: <a name="pa0141"></a>[CC-BY]* Text: Winny Asara* Illustration: Winny Asara* Translation: Anu Gill* Language: Punjabi</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td> </td>
     </tr>
     <tr>
       <td>0156</td>
@@ -3455,7 +3467,7 @@
       <td>0111</td>
       <td><a href="http://my.africanstorybook.org/stories/why-hippos-have-no-hair">Why hippos have no hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0111">ar</a>, <a href="#ko0111">ko</a>, <a href="#no0111">no</a>, <a href="#tl0111">tl</a>, <a href="#zh0111">zh</a></td>
+      <td><a href="#ar0111">ar</a>, <a href="#ko0111">ko</a>, <a href="#no0111">no</a>, <a href="#pa0111">pa</a>, <a href="#tl0111">tl</a>, <a href="#zh0111">zh</a></td>
     </tr>
     <tr>
       <td>0112</td>
@@ -3527,7 +3539,7 @@
       <td>0141</td>
       <td><a href="http://my.africanstorybook.org/stories/chicken-and-millipede">Chicken and Millipede</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0141">ar</a>, <a href="#de0141">de</a>, <a href="#ko0141">ko</a>, <a href="#no0141">no</a>, <a href="#tl0141">tl</a>, <a href="#zh0141">zh</a></td>
+      <td><a href="#ar0141">ar</a>, <a href="#de0141">de</a>, <a href="#ko0141">ko</a>, <a href="#no0141">no</a>, <a href="#pa0141">pa</a>, <a href="#tl0141">tl</a>, <a href="#zh0141">zh</a></td>
     </tr>
     <tr>
       <td>0143</td>
