--- a/stories/ko/0001_아주-키가-큰-아저씨_slides.html
+++ b/stories/ko/0001_아주-키가-큰-아저씨_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
-<p>침대는 너무 짧았어요.</p>
+<p>침대는 너무 작았어요.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
-<p>자전거도 너무 짧았어요.</p>
+<p>자전거도 너무 작았어요.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
-<p>이 아저씨는 키가 너무 컸어요!</p>
+<p>아저씨께서는 키가 너무 컸어요!</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
-<p>아저씨는 아주 긴 괭이를 만들었어요.</p>
+<p>아저씨께서는 아주 긴 괭이를 만들었어요.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
-<p>아저씨는 문을 아주 높게 만들었어요.</p>
+<p>아저씨께서는 문을 아주 높게 만들었어요.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
-<p>아저씨는 아주 긴 침대를 만들었어요.</p>
+<p>아저씨께서는 아주 긴 침대를 만들었어요.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
-<p>아저씨는 아주 높은 자전거를 만들었어요.</p>
+<p>아저씨께서는 아주 높은 자전거를 만들었어요.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
-<p>아저씨는 아주 높은 의자에 앉았어요. 그는 아주 긴 포크로 밥을 먹었어요.</p>
+<p>아저씨께서는 아주 높은 의자에 앉았어요. 그는 아주 긴 포크로 밥을 먹었어요.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
-<p>아저씨는 집을 떠나서 큰 숲 속에 살았어요. 아저씨는 오래오래 살았어요.</p>
+<p>아저씨께서는 집을 떠나서 큰 숲 속에 살았어요. 아저씨께서는 오래오래 살았어요.</p>
 <center>
 <strong>11</strong>
 </center>
