--- a/stories/ko/0072_꿀잡이새의-복수.html
+++ b/stories/ko/0072_꿀잡이새의-복수.html
@@ -49,7 +49,7 @@ Zulu folktale<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/02.jpg" /></p>
 
-<p>이 이야기는 네게데,꿀잡이새, 그리고 진질레 라는 욕심많은 젊은 사람 이야기 입니다. 진질레는 사냥을 하러 밖에 나갔어요. 갑자기 그는 네게데의 소리를 들었어요. 진질레는 꿀 생각에 입에 침이 고였어요. 그는 그의 머리 위에 나뭇 가지에 새를 볼 때까지 멈추고 주의 깊게 들었어요. “치틱-치틱-치틱,”작은 새가 그 다음 나무에 가며 소리 냈어요. 그후로 그 새는 “치틱-치틱-치틱”하며 진질레가 따라오고 있는지 수시로 멈추며 확인했어요.</p>
+<p>이 이야기는 네게데, 꿀잡이새, 그리고 진질레 라는 욕심많은 젊은 사람 이야기 입니다. 진질레는 사냥을 하러 밖에 나갔어요. 갑자기 그는 네게데의 소리를 들었어요. 진질레는 꿀 생각에 입에 침이 고였어요. 그는 그의 머리 위에 나뭇 가지에 새를 볼 때까지 멈추고 주의 깊게 들었어요. “치틱-치틱-치틱,”작은 새가 그 다음 나무에 가며 소리 냈어요. 그후로 그 새는 “치틱-치틱-치틱”하며 진질레가 따라오고 있는지 수시로 멈추며 확인했어요.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Zulu folktale<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/08.jpg" /></p>
 
-<p>그러나, 진질레는 불을 끄고 자신의 창을 집어 새를 무시하고 집으로 걷기 시작했어요. 네게데는 화를 내며 소리쳤어요, “진질레! 진질레!!” 진질레가 잠시 멈춰 그 작은 새를 응시하고 큰 소리로 웃었어요. “너도 꿀을 원하니 친구야? 하! 하지만 내가 모든일을 하고 벌침도 내가 다 맞았어.왜 내가 너랑 이 아름다운 꿀을 공유해야 하지?” 그리고 그는 걸어갔어요. 네게데는 분노했어요! 그를 이렇게 대하면 안되는거였어요! 네게데는 복수를 하려고 마음 먹었어요.</p>
+<p>그러나, 진질레는 불을 끄고 자신의 창을 집어 새를 무시하고 집으로 걷기 시작했어요. 네게데는 화를 내며 소리쳤어요, “진질레! 진질레!” 진질레가 잠시 멈춰 그 작은 새를 응시하고 큰 소리로 웃었어요. “너도 꿀을 원하니 친구야? 하! 하지만 내가 모든일을 하고 벌침도 내가 다 맞았어. 왜 내가 너랑 이 아름다운 꿀을 공유해야 하지?” 그리고 그는 걸어갔어요. 네게데는 분노했어요! 그를 이렇게 대하면 안되는거였어요! 네게데는 복수를 하려고 마음 먹었어요.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Zulu folktale<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/11.jpg" /></p>
 
-<p>레오파드가  진질레를 공격하기 전에, 진질레는 나무 아래로 돌진했어요. 그가 너무 서둘러서 그의 나뭇가지를 놓치고, 무거운 쿵 소리와 함께 떨어질 때,그의 발목이 뒤틀렸어요. 그는 빨리 다리를 절며 뛰어 갔어요. 다행히도, 표범은 그를 쫓아 가기에는 아직 너무 졸렸어요. 네게데,그 벌꿀 길잡이 새는 그의 복수를했고 진질레는 그의 교훈을 배웠습니다.</p>
+<p>레오파드가  진질레를 공격하기 전에, 진질레는 나무 아래로 돌진했어요. 그가 너무 서둘러서 그의 나뭇가지를 놓치고, 무거운 쿵 소리와 함께 떨어질 때,그의 발목이 뒤틀렸어요. 그는 빨리 다리를 절며 뛰어 갔어요. 다행히도, 표범은 그를 쫓아 가기에는 아직 너무 졸렸어요. 네게데, 그 벌꿀 길잡이 새는 그의 복수를했고 진질레는 그의 교훈을 배웠습니다.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
