--- a/stories/ko/0262_마고즈위.html
+++ b/stories/ko/0262_마고즈위.html
@@ -63,7 +63,7 @@ Lesley Koyi<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/04.jpg" /></p>
 
-<p>마고즈위가 불평을 하거나 질문을 할때면 큰아빠는 그를 마구 때렸습니다. 마고즈위가 학교를 갈 수 있겠냐 물으면, 큰아빠는 그를 때리며 이렇게 말씀하셨습니다, “ 너는 너무 어리석어서 아무것도 배울 수가 없어.” 큰아빠와 산지 3년이 될때쯤 마고즈위는 집을 떠났습니다. 그리고 그는 길거리에서 생활을 하게 되었습니다.</p>
+<p>마고즈위가 불평을 하거나 질문을 할때면 큰아빠는 그를 마구 때렸습니다. 마고즈위가 학교를 갈 수 있겠냐 물으면, 큰아빠는 그를 때리며 이렇게 말씀하셨습니다, “너는 너무 어리석어서 아무것도 배울 수가 없어.” 큰아빠와 산지 3년이 될때쯤 마고즈위는 집을 떠났습니다. 그리고 그는 길거리에서 생활을 하게 되었습니다.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -91,35 +91,35 @@ Lesley Koyi<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
 
-<p>추운 어느날이였습니다. 마고즈위는 길가에 서서 구걸을 하고 있었습니다. 그런데 어떤 남자 한분이 오셔서 말을 하셨습니다, “안녕, 나는 토마스라고해. 난 네가 음식을 먹을 수 있는곳, 저기서 일하는 사람이야.” 그 남자는 노란색 벽에 파란색 지붕을 지닌 집을 향해 가르켰습니다. “너 저기 가서 밥 먹을래?” 라고 물어봤습니다. 마고즈위는 그 남자분을 한번 보고, 그리고 집을 쳐다보았습니다. 그리고 마즈고위는 “언젠가는요,” 라고 대답을 하고 걸어갔습니다.</p>
+<p>추운 어느날이였습니다. 마고즈위는 길가에 서서 구걸을 하고 있었습니다. 그런데 어떤 남자 한분이 오셔서 말을 하셨습니다, “안녕, 나는 토마스라고해. 난 네가 음식을 먹을 수 있는곳, 저기서 일하는 사람이야.” 그 남자는 노란색 벽에 파란지붕집을 향해 가르켰습니다. “너 저기 가서 밥 먹을래?” 라고 물어봤습니다. 마고즈위는 그 남자분을 한번 보고, 그리고 집을 쳐다보았습니다. 그리고 마즈고위는 “언젠가는요,” 라고 대답을 하고 걸어갔습니다.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/09.jpg" /></p>
 
-<p>몇달후, 집없는 남자아이들은 토마스를 마주치는일이 자주 있었습니다. 그는 사람들과 대화하는걸 좋아했습니다, 특히 길거리에 사는 사람들과 대화하는걸 즐겨했습니다. 토마스는 사람들의 이야기를 들었습니다. 그는 진지하고 인내심이 많았습니다. 그는 무례하지도 버릇이 없지도 않았습니다. 마고즈위와 함께하는 남자아이들 몇명은 낮에 노란색 벽에 파란색 지붕을 지닌 집에 밥먹으러 드나들곤 했습니다.</p>
+<p>몇달후, 집없는 남자아이들은 토마스를 마주치는일이 자주 있었습니다. 그는 사람들과 대화하는걸 좋아했습니다, 특히 길거리에 사는 사람들과 대화하는걸 즐겨했습니다. 토마스는 사람들의 이야기를 들었습니다. 그는 진지하고 인내심이 많았습니다. 그는 무례하지도 버릇이 없지도 않았습니다. 마고즈위와 함께하는 남자아이들 몇명은 낮에 노란색 벽에 파란지붕집에 밥먹으러 드나들곤 했습니다.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
 
-<p>마고즈위는 길거리에 앉아서 책을 보고 있었습니다. 그런데, 옆에 토마스가 와서 앉았습니다. 토마스는 물었습니다, “이 이야기는 어떤 내용이니?” 마고즈위는 대답했습니다, “ 이 이야기는 어떤 남자아이가 비행사가 되는 이야기입니다.” 토마스는 물었습니다, “그 남자아이의 이름은 뭐니?” 마고즈위는 조용히 대답했습니다, “저도 몰라요, 저는 읽을 줄 몰라요.”</p>
+<p>마고즈위는 길거리에 앉아서 책을 보고 있었습니다. 그런데, 옆에 토마스가 와서 앉았습니다. 토마스는 물었습니다, “이 이야기는 어떤 내용이니?” 마고즈위는 대답했습니다, “이 이야기는 어떤 남자아이가 비행사가 되는 이야기입니다.” 토마스는 물었습니다, “그 남자아이의 이름은 뭐니?” 마고즈위는 조용히 대답했습니다, “저도 몰라요, 저는 읽을 줄 몰라요.”</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/11.jpg" /></p>
 
-<p>마고즈위는 토마스를 만날 때마다 자기의 대한 이야기를 들려주었습니다. 마고즈위는 큰아빠의 대해 얘기를 들려주고 왜 자기가 집을 떠났는지 말해주었습니다. 토마스는 말을 많이 하지 않았습니다 그리고 그는 마고즈위한테 무엇을 해야할지 말해주는것보다 늘 잘 들어주었습니다. 그들은 파란지붕의 집에서 밥을 먹을 때면 늘 이야기를 많이 나눴습니다.</p>
+<p>마고즈위는 토마스를 만날 때마다 자기의 대한 이야기를 들려주었습니다. 마고즈위는 큰아빠의 대해 얘기를 들려주고 왜 자기가 집을 떠났는지 말해주었습니다. 토마스는 말을 많이 하지 않았습니다 그리고 그는 마고즈위한테 무엇을 해야할지 말해주는것보다 늘 잘 들어주었습니다. 그들은 파란지붕집에서 밥을 먹을 때면 늘 이야기를 많이 나눴습니다.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
 
-<p>마고즈위의 열번째 생일이 되는날, 토마스는 새로운 책을 선물했습니다. 이 책의 이야기는 작은 마을에 사는 남자가 커서 유명한 축구선수가 된 내용이였습니다. 토마스는 그 이야기를 마고즈위에게 자주 읽어주었습니다. 그런데, 어느날 그는 얘기했습니다, “ 내 생각엔 네가 이제 학교도 가고 책읽는것도 배우면 좋을 것 같은데. 어떻게 생각해?” 그리고 토마스는 마고즈위에게 아이들이 지낼 수 있는 곳과 다닐 수 있는 학교에 대해  말을 해주었습니다.</p>
+<p>마고즈위의 열번째 생일이 되는날, 토마스는 새로운 책을 선물했습니다. 이 책의 이야기는 작은 마을에 사는 남자가 커서 유명한 축구선수가 된 내용이였습니다. 토마스는 그 이야기를 마고즈위에게 자주 읽어주었습니다. 그런데, 어느날 그는 얘기했습니다, “내 생각엔 네가 이제 학교도 가고 책읽는것도 배우면 좋을 것 같은데. 어떻게 생각해?” 그리고 토마스는 마고즈위에게 아이들이 지낼 수 있는 곳과 다닐 수 있는 학교에 대해  말을 해주었습니다.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
@@ -140,7 +140,7 @@ Lesley Koyi<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/15.jpg" /></p>
 
-<p>그래서 마고즈위는 초록색지붕을 지닌 집에서 살게 되었습니다. 그는 다른 남자두명과 방을 쓰게 되었습니다. 그 집에는 총 열명의 아이들이 살았습니다. 그위에 씨씨이모와 그분의 남편, 세마리의 강아지와, 고양이 한마리와, 늙은염소 한마리가 살았습니다.</p>
+<p>그래서 마고즈위는 초록지붕집에서 살게 되었습니다. 그는 다른 남자두명과 방을 쓰게 되었습니다. 그 집에는 총 열명의 아이들이 살았습니다. 그위에 씨씨이모와 그분의 남편, 세마리의 강아지와, 고양이 한마리와, 늙은염소 한마리가 살았습니다.</p>
 
 <div class="pagenum">14</div>
 <p></div><div class="pagebreak"></p>
@@ -154,7 +154,7 @@ Lesley Koyi<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
 
-<p>마고즈위는 초록색 지붕을 지닌 집에 있는 마당에 앉았습니다. 토마스는 그의 옆자리에 앉아서 물었습니다, “그 이야기는 어떤 내용이니?” 마고즈위는 대답해주었습니다, “이 이야기는 어떤남자아이가 선생님이 되는 이야기입니다.” 그의 이름은 무엇이냐고 토마스가 묻자, 마고즈위는 미소를 지며 대답했습니다, “ 그 아이의 이름은 마고즈위입니다.”</p>
+<p>마고즈위는 초록지붕집에 있는 마당에 앉았습니다. 토마스는 그의 옆자리에 앉아서 물었습니다, “그 이야기는 어떤 내용이니?” 마고즈위는 대답해주었습니다, “이 이야기는 어떤남자아이가 선생님이 되는 이야기입니다.” 그의 이름은 무엇이냐고 토마스가 묻자, 마고즈위는 미소를 지며 대답했습니다, “그 아이의 이름은 마고즈위입니다.”</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
